--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "ajv": "^5.5.2",
     "autoprefixer": "^9.1.0",
     "axios": "^0.19.0",
