--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "ajv": "^5.5.2",
+    "aos": "^2.3.4",
     "autoprefixer": "^9.1.0",
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
@@ -69,12 +70,15 @@
     "react-dom": "16.8.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-dropzone-component": "^3.2.0",
+    "react-html-parser": "^2.0.2",
     "react-modal": "^3.10.1",
     "react-redux": "5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
+    "react-truncate": "^2.4.0",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
+    "striptags": "^3.1.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0",
